--- a/rc_front/package.json
+++ b/rc_front/package.json
@@ -8,31 +8,32 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^26.0.24",
-    "@types/node": "^12.20.34",
-    "@types/react": "^17.0.31",
+    "@types/node": "^12.20.36",
+    "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@types/react-redux": "^7.1.20",
-    "@types/react-router-dom": "^5.3.1",
+    "@types/react-router-dom": "^5.3.2",
     "@types/react-select": "^5.0.1",
-    "axios": "^0.23.0",
+    "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.1",
     "react-dom": "^17.0.2",
-    "react-redux": "^7.2.5",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-select": "^5.1.0",
-    "sass": "^1.43.3",
+    "sass": "^1.43.4",
+    "swagger-ui-react": "^3.52.5",
     "typescript": "^4.4.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start --host 192.168.56.109",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "export NODE_OPTIONS=--openssl-legacy-provider; react-scripts start --server 192.168.56.109",
+    "build": "export NODE_OPTIONS=--openssl-legacy-provider; react-scripts build",
+    "test": "export NODE_OPTIONS=--openssl-legacy-provider; react-scripts test",
+    "eject": "export NODE_OPTIONS=--openssl-legacy-provider; react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -51,5 +52,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/swagger-ui-react": "^3.35.3"
   }
 }
